# MyDGtalContrib

./: CMakeLists.txt  README.md  curvature.sh
data/: LiverVess_small_edges2.tif
examples/: CMakeCache.txt  CMakeLists.txt
examples/converters/: CMakeLists.txt  binvox2vol.cpp  itk2vol.cpp  pgm2vol.cpp  skelab2vol.cpp  tre2vol.cpp  vol2binvox.cpp  vol2noff.cpp  vol2pgm.cpp  vol2skelab.cpp  vol2surfacevol.cpp  vol2vol.cpp
examples/converters/binvox2vol/: CMakeLists.txt  binvox2vol.cpp
examples/converters/dicom2vol/: .qglviewer.xml
examples/converters/skelab2vol/: .qglviewer.xml  CMakeLists.txt  skelab2vol.cpp
examples/converters/tre2vol/: .make  .qglviewer.xml  CMakeLists.txt
examples/converters/vol2dicom/: .qglviewer.xml  CMakeLists.txt
examples/converters/vol2surfacevol/: vol2surfacevol.cpp
examples/geometry/: BarycenterRegistration.cpp  CMakeLists.txt  CannyEdgeDetector.cpp  ComparisonImages.cpp  DeltaDistance.cpp  DeltaDistanceEdge.cpp  DeltaDistanceMax.cpp  EnsureConnectivity.cpp  EnsureConnectivity2D.cpp  ExportToGraph.cpp  FlipAxis.cpp  GPATH  GRTAGS  GTAGS  GeodesicLoops.cpp  HausdorffDistance.cpp  HausdorffDistanceWithoutJunction.cpp  HessianLocalAdaptative.cpp  HessianLocalAdaptative3D.cpp  ImageDifference.cpp  JaccardIndex.cpp  MultiscaleVesselness.cpp  MultiscaleVesselnessUniqueImage.cpp  MyHessianLocalAdaptative3D.cpp  ShapeModelization.cpp  SimpleThinning.cpp  VisuDeltaDistance.cpp  vcm-curvature.cpp
examples/hessian/: CMakeLists.txt  FrangiImage.cpp  HessianImage.cpp  MultiscaleVesselnessImage.cpp
examples/vcm/: #DeltaVCM.cpp#  #OrthogonalPlaneEstimationWithCurve.cpp#  .#OrthogonalPlaneEstimationWithCurve.cpp  CMakeLists.txt  DeltaDistanceVCMVesselness.cpp  DeltaVCM.cpp  GPATH  GRTAGS  GTAGS  OrthogonalPlaneEstimation.cpp  OrthogonalPlaneEstimationWithCurve.cpp  OrthogonalPlaneEvaluation.cpp  PruningSkeletonOrthogonalPlanes.cpp  RecenterSkeletonPoints.cpp  SkeletonOrthogonalPlanes.cpp  Torsion.cpp  VCMBinaryTubularCriterion.cpp  VCMTubularCriterion.cpp  VisuSlicesFromSkeleton.cpp
examples/visu/: #simplevisu.cpp#  CMakeLists.txt  simplevisu.cpp  visuSliceBoudin.cpp
src/: CMakeCache.txt  CannyEdgeDetector.h  ConnectedComponentMerger.h  GPATH  GRTAGS  GTAGS  Modeller.h  ReverseHatPointFunction.h  ShapeDescriptor.h  Statistics.h  Threshold.h
src/clustering/: Kmeans.h
src/geometry/: AbovePlanePredicate.h  CurveDecomposition.h  CurveProcessor.h  DigitalPlaneProcessor.h  Distance.h  DistanceToMeasure.h  DistanceToMeasureEdge.h  DistanceToMeasureEdgeLocal.h  DistanceToMeasureRelevantScale.h  MedialAxis.h  Morphomaths.h  MultiPathThinner.h  NoJunctionDetection.h  PointUtil.h  SSIJunctionDetection.h  SaddleComputer.h  SetProcessor.h  SphericalShellIntersection.h  VCMAdjustableRadius.h  VCMUtil.h
src/graph/: Edge.h  LevelConcatenation.h  WeightedEdge.h
src/hessian/: DerivativeOperator.h  DiscreteHessianFunction.h  FrangiVesselness.h  GaussianDerivativeOperator.h  HessianRecursiveGaussian.h  MultiscaleVesselnessImage.h  RecursiveGaussianDerivativeOperator.h  itkHessianRecursiveGaussianImageFilter.hxx
src/itktools/: itkBinaryFunctorBase.h  itkBinaryFunctorImageFilter2.h  itkBinaryFunctorImageFilter2.hxx  itkComparisonOperators.h  itkDescoteauxSheetnessFunctor.h  itkDescoteauxSheetnessImageFilter.h  itkDescoteauxXiaoSheetnessFunctor.h  itkFrangiSheetnessFunctor.h  itkFrangiSheetnessImageFilter.h  itkFrangiVesselnessFunctor.h  itkFrangiVesselnessImageFilter.h  itkFrangiXiaoSheetnessFunctor.h  itkFrangiXiaoSheetnessImageFilter.h  itkGaussianEnhancementImageFilter.h  itkGaussianEnhancementImageFilter.hxx  itkModifiedKrissianVesselnessFunctor.h  itkModifiedKrissianVesselnessImageFilter.h  itkMultiScaleGaussianEnhancementImageFilter.h  itkMultiScaleGaussianEnhancementImageFilter.hxx  itkStrainEnergySheetnessFunctor.h  itkStrainEnergySheetnessImageFilter.h  itkStrainEnergyVesselnessFunctor.h  itkStrainEnergyVesselnessImageFilter.h  itkUnaryFunctorBase.h  itkUnaryFunctorImageFilter2.h  itkUnaryFunctorImageFilter2.hxx
src/shapes/: #Ball.h#  Ball.h  Border.h  DigitalPlane.h  DigitalPlaneSet.h  Ellipsoid.h  GeodesicBall.h  Polygon.h
src/utils/: Modeller.h  Statistics.h
src/utils/clustering/test/: CMakeLists.txt  testWatershed.cpp  testWatershed.cpp~
src/utils/shapes/tests/: CMakeLists.txt  testCone.cpp  testCone.cpp~
src/vcm/: #OrthogonalPlaneEstimator.h#  CuttingPlaneEstimator.h  DeltaVCM.h  OrthogonalPlaneEstimator.h  PruningOrthogonalPlanes.h  PruningWithOrthogonalPlanes.h  RecenterSkeleton.h  VCMAdjustableRadius.h  (+2 more)
tests/: CMakeLists.txt  testModeller.cpp  testShapeDescriptor.cpp  testStatistics.cpp
tests/clustering/: CMakeLists.txt
tests/geometry/: CMakeLists.txt  testCurve.cpp  testCurveDecomposition.cpp  testCurveProcessor.cpp  testDigitalPlaneProcessor.cpp  testDistanceToMeasure.cpp  testDistanceToMeasureEdge.cpp  testMedialAxis.cpp  testMorphomaths.cpp  testMultiPathThinner.cpp  testPointUtil.cpp  testPolygon.cpp  testSetProcessor.cpp  testSphericalShellIntersection.cpp  testVCMAdjustableRadius.cpp
tests/geometry/path/: testLinkPoint.cpp
tests/hessian/: CMakeLists.txt  testDerivativeOperator.cpp  testDiscreteHessianFunction.cpp  testFrangiVesselness.cpp  testGaussianDerivativeOperator.cpp  testHessianRecursiveGaussian.cpp  testRecursiveGaussianDerivativeOperator.cpp
tests/shapes/: testCone.cpp
tests/utils/: CMakeLists.txt  testModeller.cpp
tests/utils/clustering/: CMakeLists.txt  testWatershed.cpp
tests/utils/geometry/: CMakeLists.txt  testCurve.cpp  testCurveDecomposition.cpp  testCurveProcessor.cpp  testDigitalPlaneProcessor.cpp  testVCMAdaptableRadius.cpp~  testVCMAdjustableRadius.cpp  testVCMOnDigitalSurfaceAdjustableRadius.cpp
tests/utils/geometry/path/: CMakeLists.txt  testLinkPoint.cpp
tests/utils/shapes/: CMakeLists.txt  testBall.cpp  testDigitalPlane.cpp
tests/vcm/: CMakeLists.txt  testCuttingPlanes.cpp  testRecenterSkeleton.cpp  testSegmentationAnnulus.cpp  testVCMAdjustableRadius.cpp  testVCMOnDigitalSurfaceAdjustableRadius.cpp
tests/vcm/skeleton/: CMakeLists.txt  testJunctionProcessingSkeleton.cpp
(+70 files in other folders)
