CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(testWatershed)
FIND_PACKAGE(DGtal REQUIRED)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})


include_directories(/home/florent/Documents/DGtal/tutorials-copy/include/)
ADD_EXECUTABLE(TestWatershed testWatershed.cpp)
TARGET_LINK_LIBRARIES(TestWatershed ${DGTAL_LIBRARIES} ${Boost_LIBRAIRIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} )