CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(testCone)
FIND_PACKAGE(DGtal REQUIRED)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})


include_directories(/home/florent/Documents/DGtal/tutorials-copy/include/)
ADD_EXECUTABLE(TestCone testCone.cpp)
TARGET_LINK_LIBRARIES(TestCone ${DGTAL_LIBRARIES} ${Boost_LIBRAIRIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} )